<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_Activity_welcome_to_baatcheet"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:textColor="?attr/dark_color"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_Activity_verify_your_number"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="?attr/textColor"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_Activity_please_enter_your_mobile_number"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:textColor="?attr/special_textColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodeHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Login_Activity_Description_countrycode_picker"
            app:ccp_autoDetectCountry="true"
            app:ccp_contentColor="?attr/textColor" />

        <EditText
            android:id="@+id/LoginMobileNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Login_Activity_Description_enter_mobile_number"
            android:layout_weight="1"
            android:maxLines="1"
            android:inputType="phone"
            android:hint="@string/Login_Activity_Hint_mobile_no"
            android:maxLength="10"
            android:autofillHints="xxxxxxxxxx"
            tools:ignore="ContentDescription" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LoginNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Login_Activity_Description_next_button"
        android:backgroundTint="?attr/normal_color"
        android:gravity="center"
        android:layout_margin="40dp"
        android:enabled="false"
        android:textStyle="normal"
        android:textColor="?attr/inverse_textColor"
        android:text="@string/Login_Activity_next_button" />

</LinearLayout>