<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OTPActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/OTPTextViewVerifyNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OTP_Activity_verify_number"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="35dp"
        android:textColor="?attr/dark_color"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/OTPTextViewShortDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OTP_Activity_enter_otp_to_verify"
        android:textColor="?attr/textColor"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/OTPNumber"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="20dp"
        android:maxLength="6"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/OTP_Activity_OTP_edit_text_hint"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="?attr/textColor"
        android:textAlignment="center"
        android:backgroundTint="?attr/very_light_color"
        android:letterSpacing="1"
        android:inputType="number"
        android:autofillHints="------" />

    <TextView
        android:id="@+id/OTPResendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:autoLink="all"
        android:textSize="20sp"
        android:text="@string/OTP_Activity_resend_otp"
        android:textColor="?attr/textColor"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/OTPNextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/OTP_Activity_Description_confirm_button"
        android:text="@string/confirm"
        android:textStyle="bold"
        android:textAlignment="center"
        android:backgroundTint="?attr/normal_color"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <ProgressBar
        android:id="@+id/OTPProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>