<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.settingsfragments.ProfilePicFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/ProfilePicFragBack"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_gravity="center"
            app:tint="?attr/textColor"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Set_Up_Activity_profile_info"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textColor="?attr/dark_color"
            android:textStyle="bold"
            android:layout_marginEnd="50dp"
            />

    </LinearLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ProfilePicFragImage"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/baseline_account_circle_24"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Set_Up_name_text"
            android:textColor="?attr/textColor"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/ProfilePicFragName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="25"
            android:autofillHints=""
            android:hint="@string/Set_Up_name"
            android:textColor="?attr/textColor"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Set_Up_about_text"
            android:textStyle="bold"
            android:textColor="?attr/textColor"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/ProfilePicFragAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="100"
            android:autofillHints=""
            android:hint="@string/Set_Up_about"
            android:textColor="?attr/textColor"
            android:inputType="text"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ProfilePicFragSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:contentDescription="@string/Login_Activity_Description_next_button"
        android:text="@string/submit"
        android:textStyle="bold"
        android:textAlignment="center"
        android:backgroundTint="?attr/normal_color"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <ProgressBar
        android:id="@+id/ProfilePicFragProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</LinearLayout>