<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="60dp"
    android:clipToPadding="false"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:cardBackgroundColor="?attr/receiver_message_chat_color"
        android:layout_alignParentStart="true"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp">

            <ImageView
                android:visibility="gone"
                android:id="@+id/MessageImageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/Sender_Message_Layout_ImageView_content_description"
                android:src="@drawable/baseline_account_circle_24"
                app:layout_constraintBottom_toTopOf="@id/MessageTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:visibility="gone"
                android:id="@+id/MessageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/dummy_short_text"
                android:textColor="?attr/textColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/MessageImageView"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/MessageTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/MessageTextView"
                android:layout_marginEnd="5dp"
                android:text="@string/dummy_time"
                android:textColor="?attr/textColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MessageTextView"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>